test/library/standard/Version/versionCastIsParam.good
versionCastIsParam.chpl:3: warning: createVersion is deprecated, please use 'new versionValue()' instead.
versionCastIsParam.chpl:6: warning: createVersion is deprecated, please use 'new versionValue()' instead.
versionCastIsParam.chpl:7: warning: 1.23.0 (vass)
versionCastIsParam.chpl:13: error: Yay!
